aggregator/platform/dev/deployment-env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aggregator
spec:
  template:
    spec:
      containers:
        - name: aggregator
