aggregator/platform/dev/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: aggregator
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: igiari.local
      http:
        paths:
          - path: /aggregator(/|$)(.*)
            backend:
              serviceName: aggregator
              servicePort: 9090
